Fix ticket button overlap bug on smaller screens

--- a/public/styles/account_mobile.css
+++ b/public/styles/account_mobile.css
@@ -136,4 +136,9 @@
   	width: 60%;
   }
 
+  .new-reply button {
+  	margin-bottom: 0.938em;
+  	float: none;
+  }
+
 }
